Added some html to members.handlebars.

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -16,6 +16,8 @@
       <a class="navbar-brand" href="/logout">
         Logout
       </a>
+      <a class="navbar-brand" href="/createSong">
+      Add To Song Book</a>
     </div>
   </div>
 </nav>
