Adding route to add a song in members.handlebars.

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -17,7 +17,8 @@
         Logout
       </a>
       <a class="navbar-brand" href="/createSong">
-      Add To Song Book</a>
+      Add To Song Book
+      </a>
     </div>
   </div>
 </nav>
