Added hero of logo to the signup handlebars page.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(102, 84, 84);
+}
+
 form.signup,
 form.login {
   margin-top: 50px;
@@ -13,4 +17,21 @@ h2 {
 }
 #createSong {
   text-align: center;
+}
+
+/* Background hero for signin/login */
+.hero_logo {
+  height: 100vh;
+  background-image: url(../images/SBWithJournal.gif);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.input-size {
+  /* width: 70vw; */
+}
+
+.text-color {
+  color: rgb(59, 179, 248);
 }
