--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,38 +2,36 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>songbirdie Authentication</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheets/reset.css" />
+  <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  {{!-- <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
     </div>
-  </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Login Form</h2>
-        <form class="login">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <button type="submit" class="btn btn-default">Login</button>
-        </form>
-        <br />
-        <p>Or sign up <a href="/">here</a></p>
-      </div>
+  </nav> --}}
+  <div class="container hero_logo">
+    <div class="col-md-6 col-md-offset-3">
+      <form class="login">
+        <div class="form-group">
+          <label class="text-color" for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control input-size" id="email-input" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <label class="text-color" for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control input-size" id="password-input" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-default text-color">Sign Up</button>
+      </form>
+      <br />
+      <p class="text-color">Or sign up <a class="text-color" href="/">here</a></p>
     </div>
   </div>
 
