Adding styling to songbirdie tab

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -11,11 +11,11 @@
 
 <body>
       
-  <nav class="navbar navbar-default">
+  <nav class="">
   <div class="container-fluid">
-    <div class="navbar-header">
+    <div class="">
       
-      <div class="menu-btn">
+      <div class="menu-btn" id="songbirdie-tab">
       
         <button id="myBtn">SongBirdie
         </button>
