--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,5 +16,9 @@ h2 {
 }
 
 #songbirdie-tab {
-
+  color: white;
+  background-color: rgb(59, 179, 248) !important;
+  border: none;
+  border-radius: 0 0 10px 10px;
+  padding: 0.5rem 1rem;
 }
