--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -11,17 +11,14 @@
 
 <body>
       
-  <nav class="">
   <div class="container-fluid">
-    <div class="">
-      
-      <div class="menu-btn" id="songbirdie-tab">
-      
-        <button id="myBtn">SongBirdie
+    <nav class="">
+      <div class="menu-btn">
+        <button id="songbirdie-tab">SongBirdie
         </button>
       
         <!-- The Modal -->
-        <div id="myModal" class="modal">
+        <div id="songbirdie-modal" class="modal">
       
           <!-- Modal content -->
           <div class="modal-content">
@@ -29,25 +26,21 @@
             <!-- <p>Some text in the Modal..</p> -->
             <ul class="topNav">
               <a href="/members">SongBirdie</a>
-              <a class="navbar-brand" href="/logout">
+              <a class="" href="/logout">
                 Logout
               </a>
-              <a class="navbar-brand" href="/createSong">
+              <a class="" href="/createSong">
                 Add To Song Book
               </a>      
             </ul>
           </div>
-      
-        </div>
-    </div>
-    </div>
-  </div>
-</nav>
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <h2>Welcome <span class="member-name"></span></h2>
-        <img id="SBgif" src="../images/SBWithJournal.gif">
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <h2>Welcome <span class="member-name"></span></h2>
+          <img id="SBgif" src="../images/SBWithJournal.gif">
           <ul>
             <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
               <div class="card-header" id="song-title">Song Title</div>
@@ -60,10 +53,12 @@
               </div>
             </div>
           </ul>
+        </div>
+    
+      </div>
     </div>
-          
+
   </div>
-</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
