--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -1,3 +1,5 @@
+ {{>header/header-block}}
+
 <main id="createSong" class="col-md-6 col-md-offset-3">
     <h1 id="addSong">Add Song</h1>
     <p id="addSongText"></p>Fill in the fields below and add this song to your SongBook</p>
