--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,53 +1,93 @@
 body {
-  background-color: rgb(102, 84, 84);
+  width: 100vw;
+  background: rgb(139, 211, 245);
 }
+
 main {
   text-align: center;
-}
-
-/* Members page */
-.members-page {
-  width: 100vw;
-  height: 100vh;
-  border: solid 5px rgb(102, 84, 84);
-  background-color: white;
-  margin: 0 auto;
-}
-
-
-form.signup,
-form.login {
-  margin-top: 50px;
-}
-
-#SBgif {
-  width: 25%;
-  height: 25%;
 }
 
 h2 {
   text-align: center;
 }
 
-#createSong {
-  text-align: center;
+.text-white {
+  color: white;
+  font-size: 2rem;
+  text-shadow: 0px 0px 5px black;
 }
 
-/* Background hero for signin/login */
-.hero_logo {
+.text-blue {
+  color: rgb(139, 211, 245);
+  font-size: 2rem;
+  text-shadow: 0px 0px 5px black;
+}
+
+/* -------------------- hero container ------------------- */
+
+/* hero_box */
+.hero_box {
   height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+.hero_logo {
+  width: 100vw;
+  height: 75vh;
   background-image: url(../images/SBsmTxtWithJournal10sec.gif);
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-top: 10rem;
 }
 
- /* .input-size { */
-  /* width: 70vw; */
-/* } */
+/* Sign up */
+.signup, .login {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5rem;
+}
 
-.text-color {
-  color: rgb(59, 179, 248);
+/* Sign up and login fields */
+.fields {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-top: 5rem;
+  padding-right: 7rem;
+}
+
+/* Input fields */
+.input-size {
+  width: 200px;
+}
+
+/* Sign up button container*/ 
+.btn-box {
+  display: inline-flex;
+}
+
+/* Sign up and login button */
+.button {
+  color: white;
+  background-color: rgba(59, 179, 248, 0.884) !important;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+}
+
+/* Sign up or login animation */
+.animate__animated.animate__bounceIn {
+  --animate-delay: 5s;
+  --animate-duration: 2s;
+}
+
+/* Sign up and login link */
+.btn-link {
+  padding-left: 2rem;
 }
 
 /* -------------------- modal styling on members page ------------------- */
@@ -89,9 +129,17 @@ h2 {
 
 /* -------------------- members page content ------------------- */
 
+/* Members page */
+.members-page {
+  width: 100vw;
+  height: 100vh;
+  border: solid 5px rgb(102, 84, 84);
+  background-color: white;
+  margin: 0 auto;
+}
+
 /* Members header box */
 .members-header {
-  
   background-color:  rgba(59, 179, 248, 0.295);
   border-bottom: solid 1px grey;
   padding-bottom: 2rem;
@@ -103,6 +151,12 @@ h2 {
   display: flex;
   justify-content: center;
   padding-top: 5rem;
+}
+
+/* Songbirdie logo on members */
+#SBgif {
+  width: 25%;
+  height: 25%;
 }
 
 /* Banner text box */
@@ -122,8 +176,33 @@ top: 8rem;
   color: #333333;
 }
 
+/* -------------------- media queries 768 ------------------- */
+
 /* Screen sizes 768 and up (iPad size) */
 @media screen and (min-width: 768px) {
+
+  .hero_logo {
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    margin-top: 0;
+  }
+
+  /* Signup and login form */
+  .signup, .login {
+    margin-top: 8rem;
+  }
+
+  /* Input fields */
+  .fields {
+    padding-right: 10rem;
+  }
+
+  /* Input fields */
+  .input-size {
+    width: 300px;
+  }
+  
   .members-page {
     width: 80vw;
   }
@@ -135,6 +214,35 @@ top: 8rem;
 
 /* Screen sizes 1024 and up (iPad pro/desktop size) */
 @media screen and (min-width: 1024px) {
+
+  /* hero_box */
+  .hero_box {
+    width: 100vw;
+  }
+  
+  /* hero_logo */
+  .hero_logo {
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    margin-top: 0rem;
+  }
+
+  /* Signup and login form */
+  .signup, .login {
+    margin-top: 12rem;
+  }
+
+  /* Sign up and login fields */
+  .fields {
+    padding-right: 15rem;
+  }
+
+  /* Input fields */
+  .input-size {
+    width: 380px;
+  }
+
   .members-page {
     width: 60vw;
   }
@@ -152,4 +260,5 @@ top: 8rem;
 
 #createSong {
   color: #333333;
+  text-align: center;
 }
