--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,45 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <title>songbirdie Authentication</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link rel="stylesheet" href="stylesheets/reset.css" />
-  <link rel="stylesheet" href="stylesheets/style.css">
-</head>
-
-<body>
-  {{!-- <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
-    </div>
-  </nav> --}}
-  <div class="container hero_logo">
-    <div class="col-md-6 col-md-offset-3">
+{{!-- Hero --}}
+<div class="hero_box">
+  <div class="hero_logo">
+    {{!-- sign up form --}}
       <form class="login">
-        <div class="form-group">
-          <label class="text-color" for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control input-size" id="email-input" placeholder="Email">
+        <div class="fields">
+           {{!-- Email --}}
+          <div class="form-group">
+            <label class="text-blue" for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control input-size" id="email-input" placeholder="Email">
+          </div>
+          {{!-- Password --}}
+          <div class="form-group">
+            <label class="text-blue" for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control input-size" id="password-input" placeholder="Password">
+          </div>
+          {{!-- Button/Link --}}
+          <div class="btn-box">
+            <button type="submit" class="button animate__animated animate__bounceIn">Login</button>
+            <p class="text-blue btn-link">Sign up <a class="text-blue" href="/">here</a></p>
+          </div>
         </div>
-        <div class="form-group">
-          <label class="text-color" for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control input-size" id="password-input" placeholder="Password">
-        </div>
-
-        <button type="submit" class="btn btn-default text-color">Login</button>
-
       </form>
-      <br />
-      <p class="text-color">Or sign up <a class="text-color" href="/">here</a></p>
-    </div>
-  </div>
+    </div> {{!-- end hero_logo --}}
+  </div> {{!-- end hero_box --}}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
-
-</body>
-
-</html>
