--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,47 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <title>songbirdie Authentication</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link rel="stylesheet" href="stylesheets/reset.css" />
-  <link rel="stylesheet" href="stylesheets/style.css">
-</head>
-
-<body>
-  {{!-- <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
-    </div>
-  </nav> --}}
-  <div class="container hero_logo">
-    <div class="col-md-6 col-md-offset-3">
-      <form class="signup">
+{{!-- Hero --}}
+<div class="hero_box">
+  <div class="hero_logo">
+    {{!-- sign up form --}}
+    <form class="signup">
+      <div class="fields">
+        {{!-- Email --}}
         <div class="form-group">
-          <label class="text-color" for="exampleInputEmail1">Email address</label>
+          <label class="text-blue" for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control input-size" id="email-input" placeholder="Email">
         </div>
+        {{!-- Password --}}
         <div class="form-group">
-          <label class="text-color" for="exampleInputPassword1">Password</label>
+          <label class="text-blue" for="exampleInputPassword1">Password</label>
           <input type="password" class="form-control input-size" id="password-input" placeholder="Password">
         </div>
+        {{!-- Alert Msg --}}
         <div style="display: none" id="alert" class="alert alert-danger" role="alert">
           <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
           <span class="sr-only">Error:</span> <span class="msg"></span>
         </div>
-        <button type="submit" class="btn btn-default">Sign Up</button>
-      </form>
-      <br />
-      <p class="text-color">Or login <a class="text-color" href="/login">here</a></p>
-    </div>
-  </div>
+        {{!-- Button/Link --}}
+        <div class="btn-box">
+          <button type="submit" class="button animate__animated animate__bounceIn">Sign Up</button>
+          <p class="text-blue btn-link">Login <a class="text-blue" href="/login">here</a></p>
+        </div>
+      </div>
+    </form>
+  </div> {{!-- end hero_logo --}}
+</div> {{!-- end hero_box --}}
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/signup.js"></script>
-
-</body>
-
-</html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/signup.js"></script>
