--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,9 +1,14 @@
   <!-- All content -->
   <div class="members-page">
 
+    {{>modal/modal-block}}
     {{>header/header-block}}
 
-    <main id="song-list" class="d-flex flex-column justify-content-center">
+    <main>
+      <h1 class="members-title" >Songs</h1>
+      <div id="song-list-box">
+
+      </div>
 
     </main>
     
