added modal to songs and createSong hbrs pages

--- a/views/song.handlebars
+++ b/views/song.handlebars
@@ -2,7 +2,7 @@
 
  <!-- All content -->
   <div class="members-page">
-  
+    {{>modal/modal-block}}
     {{>header/header-block}}
   
     <main id="song-list" class="d-flex flex-column justify-content-center">
