Added clear examples of each form on createSong page.

--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -6,22 +6,46 @@
     <p id="addSongText"></p>Fill in the fields below and add this song to your SongBook</p>
     <form class="create-form">
         <label for="title">Title name:</label><br>
-        <input size="47.5" type="text" id="title" name="titlename" placeholder="Title"><br>
+        <input size="47.5" type="text" id="title" name="titlename" placeholder="Example: Catch Hell Blues"><br>
 
         <label for="artist">Artist name:</label><br>
-        <input size="47.5" type="text" id="artist" name="artistname" placeholder="Artist"><br><br>
+        <input size="47.5" type="text" id="artist" name="artistname" placeholder="Example: The White Stripes"><br><br>
 
         <label for="tempo">Tempo:</label><br>
-        <input size="47.5" type="text" id="tempo" name="temponame" placeholder="Tempo"><br>
+        <input size="47.5" type="text" id="tempo" name="temponame" placeholder="(BPM between 60 and 120) Example: 96"><br>
 
         <label for="key">Key:</label><br>
-        <input size="47.5" type="text" id="key" name="keyname" placeholder="Key"><br><br>
+        <input size="47.5" type="text" id="key" name="keyname" placeholder="Example: A major"><br><br>
 
         <label for="chords">Chords:</label><br>
-        <textarea rows="6" cols="50" id="chords" name="chordsname" placeholder="Chords"></textarea><br><br>
+        <textarea rows="6" cols="50" id="chords" name="chordsname" placeholder="Example: A, Bm, C#m, D, E, F#m, and G#dim"></textarea><br><br>
 
         <label for="lyrics">Lyrics:</label><br>
-        <textarea rows="25" cols="50" id="lyrics" name="lyricsname" placeholder="Lyrics"></textarea><br><br>
+        <textarea rows="25" cols="50" id="lyrics" name="lyricsname" placeholder="Example: If you really want some hot water, I can help you find it.
+            Oh
+            Oh
+            Ah yeah
+            Well, if they catch me around, you're playing rock the boat
+            I'm gonna catch Hell
+            And if you're throwing your voice in bed singing a note
+            I'm gonna catch Hell
+            I know it
+            That's right
+            Try and catch me
+            Oh yeah
+            Tricky, tricky
+            Yeah
+            Oh
+            Oh
+            If you're getting tricky, lying to yourself
+            You're gonna catch Hell
+            And if you're testing God, lying to his face
+            You're gonna catch Hell
+            C'mon
+            Hey
+            That's it
+            They're gonna catch you
+            They're gonna catch you"></textarea><br><br>
 
         <button type="submit" value="Submit">Add Song
 
