--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -4,8 +4,8 @@
     {{>modal/modal-block}}
     {{>header/header-block}}
 
-    <main>
-      <h1 class="members-title" >Songs</h1>
+    <main class="song-list-members">
+      <h1 class="members-title">Songs</h1>
       <div id="song-list-box">
 
       </div>
