--- a/views/song.handlebars
+++ b/views/song.handlebars
@@ -1,20 +1,34 @@
  <link href="/stylesheets/style.css" rel="stylesheet">
 
  <!-- All content -->
-  <div class="members-page">
+  <div class="">
+    {{!-- partials --}}
     {{>modal/modal-block}}
     {{>header/header-block}}
   
-    <main id="song-list" class="d-flex flex-column justify-content-center">
-      <ul>
-        <li>Title: {{dataValues.title}}</li>
-        <li>Artist: {{dataValues.artist}}</li>
-        <li>Tempo: {{dataValues.tempo}}</li>
-        <li>Key: {{dataValues.songkey}}</li>
-        <li>Chords: {{dataValues.chords}}</li>
-        <li>Lyrics: {{dataValues.lyrics}}</li>
+    <main id="song-list" class="main-song">
+      {{!-- Header on song page --}}
+      <div class="song-header">
+        {{!-- Header details --}}
+        <div class="title-artist-box">
+          <h1 class="song-title-label">Title: <span class="song-title">{{dataValues.title}}</span></h1>
+          <h2 class="song-artist-label">Artist: <span class="song-artist">{{dataValues.artist}}</span></h2>
+        </div>
+        {{!-- Song information --}}
+        <div class="song-info-box">
+          {{!-- Chords --}}
+          <div class="chords-box">
+            <p class="chords">{{dataValues.chords}}</p>
+          </div>
+          {{!-- Tempo/Key --}}
+          <div class="others-box">
+            <p class="info-labels">Tempo: <span class="info">{{dataValues.tempo}}</span></p>
+            <p class="info-labels">Key: <span class="info">{{dataValues.songkey}}</span></p>
+        </div>
+      </div>
+      {{!-- Lyrics --}}
+      <p class="lyrics">{{dataValues.lyrics}}</p>
   
-      </ul>
     </main>
   </div>
 
