Applied styling throughout. Added TinyMCE editor to text areas.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,17 +2,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <title>Songbirdie</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <!-- Font Awesome CSS Icons (For cool glyphicons) -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
-  <link href="stylesheets/style.css" rel="stylesheet">
-</head>
+  <head>
+    <title>Songbirdie</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- Font Awesome CSS Icons (For cool glyphicons) -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+    <link href="stylesheets/style.css" rel="stylesheet">
+    {{!-- <script 
+      type="text/javascript" 
+      src="https://cdn.tiny.cloud/1/5nvntg5bcntfvlj9c3a2hvqssztg1q2kest92mux9ul2ztah/tinymce/5/tinymce.min.js" 
+      referrerpolicy="origin">
+    </script> --}}
+
+    {{!-- <script type="text/javascript">
+    tinymce.init({
+      selector:"textarea",
+      plugins: [
+        "autoresize emoticons help image media preview print spellchecker"
+      ],
+      toolbar: "undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | " +
+      "outdent indent | link image | preview print media | spellchecker | forecolor backcolor emoticons | help",
+      menu: {
+        SongBirdie: { title: "SongBirdie", items: "code visualised | searchreplace | emoticons"},
+      },
+      menubar: "SongBirdie file edit view insert format tools help",
+      content_css: "css/content.css"
+    });
+    </script> --}}
+  </head>
+
 	<body>
 		{{{ body }}}
+
 	</body>
 </html>
