--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,19 +1,18 @@
-  <!-- All content -->
-  <div class="members-page">
-
+<!-- All content -->
+<div class="full-page">
+  <div class="header-box">
     {{>modal/modal-block}}
     {{>header/header-block}}
-
-    <main class="song-list-members">
-      <h1 class="members-title">Songs</h1>
-      <div id="song-list-box">
-
-      </div>
-
-    </main>
-    
   </div>
+  <main class="main-members">
+    <h1 class="title-members">Songs</h1>
+    <div id="song-list-box">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="/js/members.js"></script>
+    </div>
 
+  </main>
+
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="/js/members.js"></script>
