--- a/views/partials/header/header-block.handlebars
+++ b/views/partials/header/header-block.handlebars
@@ -1,6 +1,6 @@
 <!-- Members header -->
-<header class="members-header">
-  <div class="members-banner">
+<header class="header-inner-box">
+  <div class="header-banner">
     <div class="banner-text-box">
       <p class="banner-text">Welcome</br><span class="member-name"></span></p>
     </div>
