--- a/views/partials/modal/modal-block.handlebars
+++ b/views/partials/modal/modal-block.handlebars
@@ -2,14 +2,14 @@
 <nav>
 
     <!-- Modal tab button -->
-    <button id="songbirdie-tab">SongBirdie</button>
+    <button id="songbirdie-tab" class="modal-tab">SongBirdie</button>
 
     <!-- The Modal -->
-    <div id="songbirdie-modal" class="modal modal-style text-center">
+    <div id="songbirdie-modal" class="modal modal-inner-box text-center">
 
         <!-- Modal content -->
         <div class="modal-content">
-            <span class="close tab-close">&times;</span>
+            <span class="close modal-close">&times;</span>
             <div class="modal-view">
                 <form class="form-inline">
                     <!-- Search button -->
