--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -1,61 +1,78 @@
 <link href="/stylesheets/style.css" rel="stylesheet">
- 
-{{>modal/modal-block}}
-{{>header/header-block}}
+{{!-- Generic styling for all pages --}}
+<div class="full-page">
+    {{!-- Header box --}}
+    <div class="header-box">
+        {{!-- Modal block --}}
+        {{>modal/modal-block}}
+        {{!-- Header block --}}
+        {{>header/header-block}}
+    </div>
 
-<main id="createSong" class="col-md-6 col-md-offset-3">
-    <h1 id="addSong">Add Song</h1>
-    <p id="addSongText"></p>Fill in the fields below and add this song to your SongBook</p>
-    <form class="create-song">
-        <label for="title">Title name:</label><br>
-        <input size="47.5" type="text" id="title" name="titlename" placeholder="Example: Catch Hell Blues"><br>
+    {{!-- Main body of the page --}}
+    <main class="main-song">
+        {{!-- Title --}}
+        <h1 class="song-name">Add Song</h1>
+        {{!-- Text --}}
+        <p class="song-text"></p>Fill in the fields below and add this song to your SongBook</p>
+        {{!-- Form --}}
+        <form class="create-song">
+            {{!-- Button --}}
+            <button class="add-song" type="submit" value="Submit">Add Song</button>
+            {{!-- Inputs --}}
+            <label class="input-labels" for="title">Title name:</label><br>
+            <input type="text" id="title" class="create-inputs" name="titlename"
+                placeholder="Example: Catch Hell Blues"><br>
 
-        <label for="artist">Artist name:</label><br>
-        <input size="47.5" type="text" id="artist" name="artistname" placeholder="Example: The White Stripes"><br><br>
+            <label for="artist">Artist name:</label><br>
+            <input type="text" id="artist" class="create-inputs" name="artistname"
+                placeholder="Example: The White Stripes"><br><br>
 
-        <label for="tempo">Tempo:</label><br>
-        <input size="47.5" type="text" id="tempo" name="temponame" placeholder="(BPM between 60 and 120) Example: 96"><br>
+            <label for="tempo">Tempo:</label><br>
+            <input type="text" id="tempo" class="create-inputs" name="temponame"
+                placeholder="(BPM between 60 and 120) Example: 96"><br>
 
-        <label for="key">Key:</label><br>
-        <input size="47.5" type="text" id="key" name="keyname" placeholder="Example: A major"><br><br>
+            <label for="key">Key:</label><br>
+            <input type="text" id="key" class="create-inputs" name="keyname" placeholder="Example: A major"><br><br>
 
-        <label for="chords">Chords:</label><br>
-        <textarea rows="6" cols="50" id="chords" name="chordsname" placeholder="Example: 
-        A, Bm, C#m, D, E, F#m, and G#dim"></textarea><br><br>
+            <div class="chords-box">
+                <label for="chords"></label><br>
+                <textarea id="chords" class="create-chords" rows="6" ccols="50" name="chordsname" placeholder="Chords: 
+                A, Bm, C#m, D, E, F#m, and G#dim"></textarea><br><br>
+            </div>
 
-        <label for="lyrics">Lyrics:</label><br>
-        <textarea rows="25" cols="50" id="lyrics" name="lyricsname" placeholder="Example: 
-        If you really want some hot water,
-        I can help you find it.
-        Oh Oh Ah yeah
-        Well, if they catch me around, 
-        you're playing rock the boat
-        I'm gonna catch Hell
-        And if you're throwing your voice in bed 
-        singing a note
-        I'm gonna catch Hell
-        I know it
-        That's right
-        Try and catch me
-        Oh yeah
-        Tricky, tricky
-        Yeah
-        Oh Oh
-        If you're getting tricky, lying to yourself
-        You're gonna catch Hell
-        And if you're testing God, lying to his face
-        You're gonna catch Hell
-        C'mon
-        Hey
-        That's it
-        They're gonna catch you
-        They're gonna catch you"></textarea><br><br>
-
-        <button type="submit" value="Submit">Add Song
-
-        </button>
-    </form>
-</main>
+            <div class="lyrics-box">
+                <label for="lyrics"></label><br>
+                <textarea id="lyrics" class="create-lyrics" rows="25" cols="50" name="lyricsname" placeholder="Lyrics: 
+                If you really want some hot water,
+                I can help you find it.
+                Oh Oh Ah yeah
+                Well, if they catch me around, 
+                you're playing rock the boat
+                I'm gonna catch Hell
+                And if you're throwing your voice in bed 
+                singing a note
+                I'm gonna catch Hell
+                I know it
+                That's right
+                Try and catch me
+                Oh yeah
+                Tricky, tricky
+                Yeah
+                Oh Oh
+                If you're getting tricky, lying to yourself
+                You're gonna catch Hell
+                And if you're testing God, lying to his face
+                You're gonna catch Hell
+                C'mon
+                Hey
+                That's it
+                They're gonna catch you
+                They're gonna catch you"></textarea><br><br>
+            </div>
+        </form>
+    </main>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/createSong.js"></script>
