--- a/views/song.handlebars
+++ b/views/song.handlebars
@@ -1,40 +1,43 @@
- <link href="/stylesheets/style.css" rel="stylesheet">
+<link href="/stylesheets/style.css" rel="stylesheet">
 
- <!-- All content -->
-  <div class="">
-    <div class="modal-box d-flex">
-    {{!-- partials --}}
+<!-- All content -->
+<div class="full-page">
+  <div class="header-box">
+    <div class="modal-box">
+      {{!-- Modal block --}}
       {{>modal/modal-block}}
       {{>delete/delete-block}}
     </div>
     {{>header/header-block}}
-  
-    <main id="song-list" class="main-song">
-      {{!-- Header on song page --}}
-      <div class="song-header">
-        
-        {{!-- Header details --}}
-        <div class="title-artist-box">
-          <h1 class="song-title-label">Title: <span class="song-title">{{dataValues.title}}</span></h1>
-          <h2 class="song-artist-label">Artist: <span class="song-artist">{{dataValues.artist}}</span></h2>
+  </div>
+
+  <main class="main-song">
+    {{!-- Header on song page --}}
+    <div class="song-header">
+
+      {{!-- Header details --}}
+      <div class="title-artist-box">
+        <h1 class="song-title-label">Title: <span class="song-title">{{dataValues.title}}</span></h1>
+        <h2 class="song-artist-label">Artist: <span class="song-artist">{{dataValues.artist}}</span></h2>
+      </div>
+      {{!-- Song information --}}
+      <div class="song-info-box">
+        {{!-- Tempo/Key --}}
+        <div class="others-box">
+          <p class="info-labels">Tempo: <span class="info">{{dataValues.tempo}}</span></p>
+          <p class="info-labels">Key: <span class="info">{{dataValues.songkey}}</span></p>
         </div>
-        {{!-- Song information --}}
-        <div class="song-info-box">
-          {{!-- Chords --}}
-          <div class="chords-box">
-            <p class="chords">{{dataValues.chords}}</p>
-          </div>
-          {{!-- Tempo/Key --}}
-          <div class="others-box">
-            <p class="info-labels">Tempo: <span class="info">{{dataValues.tempo}}</span></p>
-            <p class="info-labels">Key: <span class="info">{{dataValues.songkey}}</span></p>
+        {{!-- Chords --}}
+        <div class="chords-box">
+          <p class="chords">{{dataValues.chords}}</p>
         </div>
       </div>
       {{!-- Lyrics --}}
-      <p class="lyrics">{{dataValues.lyrics}}</p>
-  
-    </main>
-  </div>
+      <div class="lyrics-box">
+        <p class="lyrics">{{dataValues.lyrics}}</p>
+      </div>
+  </main>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="/js/song.js"></script>
