--- a/views/updateSong.handlebars
+++ b/views/updateSong.handlebars
@@ -1,33 +1,52 @@
 <link href="/stylesheets/style.css" rel="stylesheet">
+{{!-- Generic styling for all pages --}}
+<div class="full-page">
+    {{!-- Header box --}}
+    <div class="header-box">
+        <div class="modal-box">
+            {{!-- Modal block --}}
+            {{>modal/modal-block}}
+            {{>delete/delete-block}}
+        </div>
+        {{!-- Header block --}}
+        {{>header/header-block}}
+    </div>
 
-{{>modal/modal-block}}
-{{>header/header-block}}
+    {{!-- Main body of the page --}}
+    <main class="main-song">
+        {{!-- Title --}}
+        <h1 class="song-name">Update Song</h1>
+        {{!-- Text --}}
+        <p class="song-text"></p>Update your song here and save it to your songbook.</p>
+        {{!-- Form --}}
+        <form class="update-song" data-id="{{dataValues.id}}">
+            {{!-- Button --}}
+            <button class="edit-song" type="submit" value="Submit">Update Song</button>
+            {{!-- Inputs --}}
+            <label class="input-labels" for="title">Title name:</label><br>
+            <input size="47.5" type="text" id="title" class="create-inputs" name="titlename" value="{{dataValues.title}}"><br>
 
-<main id="updateSong" class="col-md-6 col-md-offset-3">
-    <h1 id="addSong">Update Song</h1>
-    <p id="addSongText"></p>Update your song here and save it to your songbook.</p>
-    <form class="update-song" data-id="{{dataValues.id}}">
-        <label for="title">Title name:</label><br>
-        <input size="47.5" type="text" id="title" name="titlename" value="{{dataValues.title}}"><br>
+            <label for="artist">Artist name:</label><br>
+            <input size="47.5" type="text" id="artist" class="create-inputs" name="artistname" value="{{dataValues.artist}}"><br><br>
 
-        <label for="artist">Artist name:</label><br>
-        <input size="47.5" type="text" id="artist" name="artistname" value="{{dataValues.artist}}"><br><br>
+            <label for="tempo">Tempo:</label><br>
+            <input size="47.5" type="text" id="tempo" class="create-inputs" name="temponame" value="{{dataValues.tempo}}"><br>
 
-        <label for="tempo">Tempo:</label><br>
-        <input size="47.5" type="text" id="tempo" name="temponame" value="{{dataValues.tempo}}"><br>
+            <label for="key">Key:</label><br>
+            <input size="47.5" type="text" id="key" class="create-inputs" name="keyname" value="{{dataValues.songkey}}"><br><br>
 
-        <label for="key">Key:</label><br>
-        <input size="47.5" type="text" id="key" name="keyname" value="{{dataValues.songkey}}"><br><br>
+            <div class="chords-box">
+                <label for="chords"></label><br>
+                <textarea id="chords" class="create-chords" rows="6" cols="50" name="chordsname">{{dataValues.chords}}</textarea><br><br>
+            </div>
 
-        <label for="chords">Chords:</label><br>
-        <textarea rows="6" cols="50" id="chords" name="chordsname">{{dataValues.chords}}</textarea><br><br>
-
-        <label for="lyrics">Lyrics:</label><br>
-        <textarea rows="25" cols="50" id="lyrics" name="lyricsname">{{dataValues.lyrics}}</textarea><br><br>
-
-        <button type="submit" value="Submit">Update Song</button>
-    </form>
-</main>
+            <div class="lyrics-box">
+                <label for="lyrics"></label><br>
+                <textarea id="lyrics" class="create-lyrics" rows="25" cols="50"  name="lyricsname">{{dataValues.lyrics}}</textarea><br><br>
+            </div>
+        </form>
+    </main>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="/js/song.js"></script>
