--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -229,7 +229,8 @@ body {
 song title/artist on members page */
 .main-members {
   text-align: center;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   padding: 2rem;
 }
 
