--- a/views/partials/modal/modal-block.handlebars
+++ b/views/partials/modal/modal-block.handlebars
@@ -13,13 +13,19 @@
             <div class="modal-view">
                 <form class="form-inline">
                     <!-- Search button -->
-                    <button type="submit" class="mr-1 ml-1" id="search-btn">
+                    <button type="button" class="mr-1 ml-1" id="song-search-btn">Song
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="rgb(98, 3, 187)" class="bi bi-search mb-1" id="search-btn-img" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                        </svg>
+                    </button>
+                    <button type="button" class="mr-1 ml-1" id="artist-search-btn">Artist
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="rgb(98, 3, 187)" class="bi bi-search mb-1" id="search-btn-img" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                         </svg>
                     </button>
                     <!-- Song search field -->
-                    <input type="text" class="mt-0 ml-1" id="song-name" placeholder="Search">
+                    <input type="text" class="mt-0 ml-1" id="searchBar" placeholder="Search">filler</input>
+
                     <a href="/members">SongBirdie</a>
                     <a href="/addSong">Add To Song Book</a>
                     <a href="/logout">Logout</a>
@@ -28,3 +34,6 @@
         </div>
     </div>
 </nav>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/search.js"></script>
