Songbirdie modal styling fixes.

--- a/views/partials/modal/modal-block.handlebars
+++ b/views/partials/modal/modal-block.handlebars
@@ -20,9 +20,11 @@
                     </button>
                     <!-- Song search field -->
                     <input type="text" class="mt-0 ml-1" id="song-name" placeholder="Search">
-                    <a href="/members">SongBirdie</a>
-                    <a href="/addSong">Add To Song Book</a>
-                    <a href="/logout">Logout</a>
+                    <div class="link-box">
+                        <a href="/members">SongBirdie</a>
+                        <a href="/addSong">Add To Song Book</a>
+                        <a href="/logout">Logout</a>
+                    </div>
                 </form>
             </div>
         </div>
