--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -159,21 +159,31 @@ body {
 /* Modal content box */
 .modal-content {
   display: flex;
+  justify-content: center;
 }
 
 /* modal close button x */
 .modal-close {
+  max-width: 800px;
   color: rgb(98, 3, 187) !important;
-  padding-left: 1rem;
   font-size: 2.5rem;
+  position: absolute;
+  top: 0.5rem;
+  left: 1rem;
 }
 
 /* modal window view */
 .modal-view {
-  display: flex;
-  flex-wrap: wrap;
+  /* display: flex;
+  flex-wrap: wrap; */
   background-color: transparent !important;
   padding: 1rem;
+}
+
+/* Form for modal search and links */
+.form-line {
+  display: flex;
+  justify-content: center;
 }
 
 #search-btn {
