--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -5,7 +5,7 @@
     {{>header/header-block}}
   </div>
   <main class="main-members">
-    <h1 class="title-members">Songs</h1>
+    <h1 class="title-members">SongBirdie</h1>
     <div id="song-list-box">
 
     </div>
