--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,18 +21,21 @@ body {
 
 /* hero_box */
 .hero_box {
+  max-width: 800px;
+  width: 100%;
   height: 100vh;
-  display: flex;
-  justify-content: center;
+  /* display: flex; */
+  /* justify-content: center; */
 }
 
 .hero_logo {
+  max-width: 800px;
   width: 100vw;
-  height: 75vh;
+  height: 100vh;
   background-image: url(../images/SBsmTxtWithJournal10sec.gif);
   background-position: top;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
   margin-top: 10rem;
 }
 
